Fixed spacing around 'on' using js instead of using css

--- a/webapp/src/components/link_tooltip/tooltip.css
+++ b/webapp/src/components/link_tooltip/tooltip.css
@@ -122,8 +122,3 @@
     border-radius: 3px;
     max-width: 140px;
 }
-
-.text-spacing {
-    display: inline-block;
-    margin: 0 3px;
-}
